tests/errors/type_check/error_span/structured_assignment_type_mismatch_at_stmt_span.sim
fn f() {
  x: i64;
  entry:
                x = true;
                return
}