tests/errors/type_check/error_span/structured_assignment_type_mismatch_at_stmt_span.err.expected
error: at 4:17: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 4 |                 x = true;
   |                 ^^^^^^^^
